--- a/emsfrontend/src/index.css
+++ b/emsfrontend/src/index.css
@@ -1,68 +1,116 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --bg-card: #e9c46a;
+  --bg-background: rgb(227, 231, 230);
+  --bg-hero: rgb(227, 231, 230);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --text-normal: rgb(22, 26, 32);
+  --text-light: rgb(22, 26, 32, 0.9);
+  --text-extra-light: rgba(22, 26, 32, 0.6);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --font-large: 64px;
+  --font-medium: 42px;
+  --font-small: 32px;
+  --font-small-e: 24px;
+  --font-extra-small: 16px;
+
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Inter Tight", sans-serif;
+}
+  
+/* body::-webkit-scrollbar {
+  display: none;
+} */
+
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  background-color: var(--bg-background);
+}
+
+p, li, a {
+  color: var(--text-light);
+  font-size: var(--font-extra-small);
+  letter-spacing: 0.5px;
+  line-height: 22px;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  text-decoration: none;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+ul {
+  list-style: none;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.container {
+  width: 100%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.inner-container {
+  width: 90%;
+  margin: 0 auto;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/* Responsive style */
+
+@media only screen and (min-width:540px) {
+    
+  .container {
+    width: 100%;
   }
-  a:hover {
-    color: #747bff;
+  
+  .inner-container {
+    width: 90%;
+    margin: 0 auto;
   }
-  button {
-    background-color: #f9f9f9;
+  
+}
+
+
+@media only screen and (min-width:768px) {
+  
+  .inner-container {
+    width: 90%;
   }
+
+}
+
+
+@media only screen and (min-width:992px) {
+  
+  .inner-container {
+    width: 90%;
+  }
+  
+}
+
+@media only screen and (min-width:1200px) {
+  
+  .container {
+    width: 100%;
+  }
+  
+  .inner-container {
+    width: 80%;
+  }
+  
+}
+
+@media only screen and (min-width:1400px) {
+
+  .container {
+    max-width: 1920px;
+  }
+  
+  .inner-container {
+  }
+
 }
