--- a/emsfrontend/src/components/Navbar.css
+++ b/emsfrontend/src/components/Navbar.css
@@ -1,8 +1,9 @@
 .navbar {
-    position: absolute;
+    position: relative;
     background-color: #e76f51;
     padding: 12px 0;
     z-index: 100;
+    border-bottom: 0.3px solid #e9c46a;
 }
 
 .inner-container {
@@ -43,6 +44,7 @@
     .inner-container {
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
     }
 
     .navbar .logo {
