--- a/emsfrontend/src/components/EventCard.css
+++ b/emsfrontend/src/components/EventCard.css
@@ -1,9 +1,12 @@
+.sub-header {
+    margin: 80px 0 40px;
+}
+
 .card-container {
     position: relative;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
     gap: 72px;
-    margin: 80px 0;
 }
 
 .card-container .card {
