--- a/emsfrontend/src/components/InputEvent.css
+++ b/emsfrontend/src/components/InputEvent.css
@@ -105,7 +105,7 @@ input:-webkit-autofill {
     font-size: 36px;
     color: var(--text-light);
     letter-spacing: 0.5px;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .contact-header h3 img {
@@ -138,6 +138,10 @@ input:-webkit-autofill {
     .contact-header h3 span {
         font-size: 42px;
     }
+
+    .contact-form {
+        min-width: 480px;
+    }
 }
 
 
@@ -149,7 +153,7 @@ input:-webkit-autofill {
     }
 
     .contact-form {
-        max-width: 480px;
+        min-width: 580px;
     }
 
     .contact-header h3 {
@@ -238,7 +242,7 @@ input:-webkit-autofill {
     }
 
     ::placeholder {
-        font-size: 24px;
+        font-size: 18px;
     }
 
 }
