--- a/emsfrontend/src/components/EventCard.css
+++ b/emsfrontend/src/components/EventCard.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     gap: 12px;
     max-width: 100%;
+    height: 100%;
     background-color: var(--bg-card);
     cursor: pointer;
 }
